# Hondo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
glsl/: DebugShader.frag  DebugShader.vert  DirLight.frag  DirLight.vert  LineShader.frag  LineShader.geom  LineShader.vert  PointLight.frag  PointLight.vert  SkyShader.frag  SkyShader.vert  SpotLight.frag  SpotLight.vert  depth.frag  depth.vert  fbo.frag  fbo.vert  simple.frag  simple.vert
lib/: CMakeLists.txt
lib/SOIL/: SOIL.c
src/: BagTest.cpp  DebugUtils.h  EcsTest.cpp  Mesh.hpp  main.cpp
src/ecs/: Bag.hpp  Component.cpp  Component.hpp  ComponentManager.hpp  EcsTest  EcsTest.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  Makefile  Ref.hpp  System.hpp  World.cpp  World.hpp
src/game/: FPSController.cpp  FPSController.hpp
src/gfx/: .directory  AABB.cpp  AABB.hpp  Camera.cpp  Camera.h  Camera.hpp  DebugRenderer.cpp  DebugRenderer.hpp  DepthBuffer.cpp  DepthBuffer.hpp  DrawArraysIndirectCommand.h  DrawArraysIndirectCommand.hpp  Entity.cpp  Entity.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  MtlLoader.cpp  MtlLoader.hpp  ObjLoader.cpp  ObjLoader.h  ObjLoader.hpp  Octree.cpp  Octree.hpp  RenderObject.cpp  RenderObject.h  RenderObject.hpp  Renderer.cpp  Renderer.h  Renderer.hpp  SceneGraph.cpp  SceneGraph.hpp  SkyBox.cpp  SkyBox.hpp  Transform.cpp  Transform.hpp  Triangle.cpp  Triangle.h  VertexArray.cpp  (+4 more)
src/gfx/importer/: MtlLoader.cpp  MtlLoader.hpp  ObjLoader.cpp  ObjLoader.hpp  ObjLoaderUtils.cpp  ObjLoaderUtils.h  ObjLoaderUtils.hpp
src/gfx/lights/: DirLight.cpp  DirLight.hpp  Light.cpp  Light.hpp  PointLight.cpp  PointLight.hpp  SpotLight.cpp  SpotLight.hpp
src/gfx/shader/: .directory  DebugShader.cpp  DebugShader.hpp  DepthShader.cpp  DepthShader.hpp  FramebufferShader.cpp  FramebufferShader.hpp  LightShader.cpp  LightShader.hpp  LineShader.cpp  LineShader.hpp  PointLightShader.cpp  PointLightShader.hpp  ShaderProgram.cpp  ShaderProgram.h  ShaderProgram.hpp  ShaderUtils.cpp  SimpleShader.cpp  SimpleShader.h  SimpleShader.hpp  SkyShader.cpp  SkyShader.hpp  SpotLightShader.cpp  SpotLightShader.hpp
src/gfx/shader/debugshader/: DebugShader.cpp  DebugShader.hpp  LineShader.cpp  LineShader.hpp
src/input/: Action.cpp  Action.h  Actions.cpp  Actions.h  Actions.hpp  Input.cpp  Input.h  Input.hpp  InputHandler.cpp  InputHandler.h  Mappings.cpp
src/ui/: DebugText.cpp  DebugText.hpp  FrameGraph.cpp  FrameGraph.hpp
